<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="lblBill">Bill</string>
    <string name="lblTipPer">Tip %</string>
    <string name="lblTip">Tip</string>
    <string name="lblTotalBill">Total</string>
    <string name="resetTxt">RESET</string>
    <string name="lblEuro">€</string>
    <string name="lblPer">%</string>
    <string name="lblDiners">Diners</string>
    <string name="lblPerDiner">Per diner</string>
    <string name="lblRounded">Rounded</string>
    <string name="defaultMoney">0.00</string>
    <string name="defaultTipPer">10.00</string>
    <string name="defaultDinners">1</string>
    <string name="defaultMaxTipPer">100.00</string>
    <string name="point">.</string>
    <string name="numberFormat">%.2f</string>
</resources>
