<?xml version="1.0" encoding="utf-8"?>
<!-- TODO Using ConstraintLayout
     android:textAppearance="?android:attr/textAppearanceSmall" for TextViews
     style="@style/Base.TextAppearance.AppCompat.Headline" for EditTexts
     style="@style/Widget.AppCompat.Button.Borderless" for Buttons
-->

<!-- VISTA DE BILL -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/main_margin"
    android:orientation="vertical"
    tools:context=".ui.main.MainActivity">

    <!-- BILL -->
    <TextView
        android:id="@+id/lblBill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lblBill"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@id/txtBill"
        app:layout_constraintLeft_toLeftOf="@id/txtBill"
        app:layout_constraintRight_toRightOf="@id/txtBill"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/txtBill"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/lblEuroBill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblBill"
        app:layout_constraintWidth_percent="0.95">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lblEuroBill"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lblEuro"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintBottom_toBottomOf="@+id/txtBill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblBill" />


    <!-- TIP % -->
    <TextView
        android:id="@+id/lblTipPer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lblTipPer"
        android:textAlignment="textEnd"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintRight_toRightOf="@id/txtTipPer"
        app:layout_constraintTop_toBottomOf="@+id/txtBill"/>
    <EditText
        android:id="@+id/txtTipPer"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/lblTip"
        app:layout_constraintRight_toRightOf="@id/lblPer"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTipPer" />
    <TextView
        android:id="@+id/lblPer"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblPer"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintBottom_toBottomOf="@+id/txtTipPer"
        app:layout_constraintLeft_toRightOf="@id/txtTipPer"
        app:layout_constraintTop_toBottomOf="@id/lblTipPer"/>

    <!-- TIP -->
    <TextView
        android:id="@+id/lblTip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lblTip"
        android:textAlignment="textEnd"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintRight_toRightOf="@id/txtBill"
        app:layout_constraintTop_toBottomOf="@id/txtBill" />
    <EditText
        android:id="@+id/txtTip"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:textAlignment="textEnd"

        app:layout_constraintRight_toRightOf="@id/lblTip"
        app:layout_constraintLeft_toRightOf="@id/lblPer"
        app:layout_constraintTop_toBottomOf="@+id/lblTip" />
    <TextView
        android:id="@+id/lblEuroTip"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lblEuro"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintBottom_toBottomOf="@+id/txtTip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblTip" />

    <!-- TOTAL -->
    <TextView
        android:id="@+id/lblTotalBill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lblTotalBill"
        android:textAlignment="textEnd"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintEnd_toEndOf="@+id/txtTotalBill"
        app:layout_constraintStart_toStartOf="@+id/txtTotalBill"
        app:layout_constraintTop_toBottomOf="@id/txtTipPer" />

    <EditText
        android:id="@+id/txtTotalBill"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:inputType="none"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="@+id/txtBill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTotalBill"
        app:layout_constraintWidth_percent="0.95" />
    <TextView
        android:id="@+id/lblEuroTotal"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lblEuro"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintBottom_toBottomOf="@+id/txtTotalBill"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblTotalBill" />

    <Button
        android:id="@+id/btnResetBill"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetTxt"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@+id/txtTotalBill"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalBill" />
</androidx.constraintlayout.widget.ConstraintLayout>